.metadata/.plugins/org.eclipse.cdt.ui/Lab3.5.build.log
20:40:51 **** Incremental Build of configuration Debug for project Lab3.5 ****
make all 
Building file: ../WoodyFurniture.cpp
Invoking: GCC C++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"WoodyFurniture.d" -MT"WoodyFurniture.d" -o "WoodyFurniture.o" "../WoodyFurniture.cpp"
../WoodyFurniture.cpp:20:37: error: a brace-enclosed initializer is not allowed here before ‘{’ token
  const static string FURNITURE[3] = {
                                     ^
../WoodyFurniture.cpp:24:2: error: invalid in-class initialization of static data member of non-integral type ‘const string [3] {aka const std::basic_string<char> [3]}’
  };
  ^
../WoodyFurniture.cpp:24:2: error: initializer invalid for static member with constructor
../WoodyFurniture.cpp:24:2: note: (an out of class initialization is required)
subdir.mk:18: recipe for target 'WoodyFurniture.o' failed
make: *** [WoodyFurniture.o] Error 1

20:40:51 Build Finished (took 162ms)

